--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
     font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
     color: #ffffff;
-    background-color: #000000;
+    background-color: black;
     margin: 0;
     padding: 0;
     line-height: 1.6;
