--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,64 +1,91 @@
+/* Footer general */
 .footer {
-    background-color: #0b0b0b;
-    color: #939393;
-    padding: 40px 20px;
-    text-align: center;
-  }
-  
+  background-color: #0b0b0b;
+  color: #d3d3d3;
+  padding: 60px 20px;
+  text-align: center;
+  font-family: 'Helvetica Neue', sans-serif;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #555;
+}
+
+.about-us, .social-media, .additional-links {
+  flex: 1;
+  min-width: 300px;
+  margin: 10px;
+}
+
+.about-us h3, .social-media h3, .additional-links h3 {
+  font-size: 20px;
+  margin-bottom: 15px;
+  color: #f0f0f0;
+  text-transform: uppercase;
+  border-bottom: 2px solid #d4af37; /* Detalle en dorado */
+  display: inline-block;
+}
+
+.about-us p, .additional-links ul {
+  font-size: 14px;
+  line-height: 1.6;
+  color: #b0b0b0;
+}
+
+.additional-links ul {
+  list-style: none;
+  padding: 0;
+}
+
+.additional-links ul li a {
+  color: #d3d3d3;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.additional-links ul li a:hover {
+  color: #d4af37; /* Hover dorado */
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.social-icons a {
+  display: inline-block;
+  font-size: 24px;
+  color: #b0b0b0;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: #d4af37; /* Hover dorado */
+  transform: translateY(-5px); /* Efecto de desplazamiento */
+}
+
+.footer-bottom {
+  margin-top: 30px;
+  padding-top: 10px;
+  font-size: 14px;
+  color: #9a9a9a;
+}
+
+/* Responsividad */
+@media (max-width: 768px) {
   .footer-content {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
   }
-  
-  .about-us, .social-media {
-    flex: 1;
-    min-width: 300px;
-    margin: 10px;
-  }
-  
-  .about-us h3, .social-media h3 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .about-us p {
-    font-size: 16px;
-    line-height: 1.5;
-  }
-  
+
   .social-icons {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
+    margin-top: 20px;
   }
-  
-  .social-icons a {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    transition: transform 0.3s ease;
-  }
-  
-  .social-icons a:hover {
-    transform: scale(1.2);
-  }
-  
-  .social-icons img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .footer-bottom {
-    margin-top: 30px;
-    border-top: 1px solid #555;
-    padding-top: 10px;
-  }
-  
-  .footer-bottom p {
-    font-size: 14px;
-    color: #9a9a9a;
-  }
-  
+}
