--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,10 @@
+/* Base styling for the nav */
 nav {
   position: sticky;
   top: 0;
   z-index: 1000;
   background: rgb(0, 0, 0);
   transition: background-color 0.3s ease; 
-
   padding: 10px 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
 }
@@ -98,7 +98,6 @@ nav ul ul a {
   padding: 10px;
   transition: color 0.3s ease, background-color 0.3s ease;
   text-decoration: none;
-  /* Eliminar subrayado */
 }
 
 nav ul ul a:hover,
@@ -117,12 +116,12 @@ nav li:hover > ul {
   from {
     opacity: 0;
   }
-
   to {
     opacity: 1;
   }
 }
 
+/* Input and search button styles */
 .input-container {
   position: relative;
   width: 250px;
@@ -140,8 +139,6 @@ nav li:hover > ul {
   background-color: transparent;
   outline: none;
   color: #fff;
-  font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
-    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
 }
 
 .input-container .label {
@@ -192,6 +189,43 @@ nav li:hover > ul {
   color: #000;
   background-color: #fff;
   border-radius: 5px;
+}
+
+/* Responsiveness for the menu */
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+  position: absolute;
+  left: 20px;
+}
+
+@media (max-width: 768px) {
+  .nav-content {
+    justify-content: flex-start;
+  }
+
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    flex-direction: column;
+    padding: 20px 0;
+    text-align: center;
+    gap: 15px;
+  }
+
+  .nav-links.open {
+    display: flex;
+  }
+
+  .hamburger {
+    display: block;
+  }
 }
 
 .intro {
