--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,114 +1,110 @@
 .slider-container {
-    position: relative;
-    width: 100%;
-    height: 80vh; /* Ajusta este valor según el tamaño de la sección que quieras ocupar */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-  }
-  
-  /* Fondo gradiente superpuesto para dar más enfoque a las imágenes y botones */
-  .slider-container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1));
-    z-index: 1;
-  }
-  
-  .slider-slide {
-    opacity: 0;
-    transition: opacity 1s ease-in-out, filter 1s ease-in-out;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1; /* Las imágenes se sitúan debajo del gradiente */
-  }
-  
-  .slider-active {
-    opacity: 1;
-    filter: blur(0);
-  }
-  
- 
-  
-  .slider-img {
-    width: 100%;
-    height: auto;
-    object-fit: cover; /* Ajusta las imágenes sin distorsionarlas */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1); /* Sombra suave */
-    border-radius: 10px; /* Esquinas redondeadas */
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .slider-img:hover {
-    transform: scale(1.05); /* Efecto de zoom suave al pasar el ratón */
-  }
-  
-  .slider-button {
-    background: none;
-    border: none;
-    font-size: 3rem;
-    color: white;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10;
-    cursor: pointer;
-    transition: transform 0.2s ease-in-out, color 0.3s ease;
-  }
-  
-  .slider-button:hover {
-    transform: scale(1.2); /* Agranda un poco la flecha al pasar el ratón */
-    color: #f2f2f2;
-  }
-  
-  .slider-button:first-of-type {
-    left: 20px;
-  }
-  
-  .slider-button:last-of-type {
-    right: 20px;
-  }
-  
-  /* Indicadores de progreso */
-  .slider-indicators {
-    position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: center;
-  }
-  
-  .slider-dot {
-    height: 10px;
-    width: 10px;
-    margin: 0 5px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .slider-dot-active {
-    background-color: white;
-  }
-  
-  /* Texto superpuesto sobre la imagen */
-  .slider-text {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    color: white;
-    font-size: 1rem;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    z-index: 2; /* El texto está encima de todo */
-  }
+  position: relative;
+  width: 100%;
+  height: 80vh; /* Ajusta este valor según el tamaño de la sección que quieras ocupar */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
 
+/* Fondo gradiente superpuesto para dar más enfoque a las imágenes y botones */
+.slider-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1));
+  z-index: 1;
+}
 
-  
+.slider-slide {
+  opacity: 0;
+  filter: blur(5px); /* Añadimos un pequeño desenfoque */
+  transition: opacity 1s ease-in-out, filter 1s ease-in-out;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.slider-active {
+  opacity: 1;
+  filter: blur(0); /* La imagen activa no tiene desenfoque */
+}
+
+.slider-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover; /* Ajusta las imágenes sin distorsionarlas */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  border-radius: 10px; /* Esquinas redondeadas */
+  transition: transform 0.3s ease-in-out;
+}
+
+.slider-img:hover {
+  transform: scale(1.05); /* Efecto de zoom suave al pasar el ratón */
+}
+
+.slider-button {
+  background: none;
+  border: none;
+  font-size: 3rem;
+  color: white;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out, color 0.3s ease;
+}
+
+.slider-button:hover {
+  transform: scale(1.2); /* Agranda un poco la flecha al pasar el ratón */
+  color: #f2f2f2;
+}
+
+.slider-button:first-of-type {
+  left: 20px;
+}
+
+.slider-button:last-of-type {
+  right: 20px;
+}
+
+/* Indicadores de progreso */
+.slider-indicators {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+}
+
+.slider-dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.slider-dot-active {
+  background-color: white;
+}
+
+/* Texto superpuesto sobre la imagen */
+.slider-text {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: white;
+  font-size: 1rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  z-index: 2; /* El texto está encima de todo */
+}
